Adds settings.FEATURES.ENABLE_SEPARATE_ARCHIVED_COURSES
Separates archived courses into a different tab on the Studio index page.

Data is rendered synchronously, but tests are added to ensure that no new sql
or mongo queries were required.

(cherry picked from commit 8087a1d165649b65907df5ed12df5940d8ff3462)

--- a/cms/static/sass/views/_dashboard.scss
+++ b/cms/static/sass/views/_dashboard.scss
@@ -318,7 +318,7 @@
   }
 
   // ELEM: course listings
-  .courses-tab, .libraries-tab, .programs-tab {
+  .courses-tab, .archived-courses-tab, .libraries-tab, .programs-tab {
     display: none;
 
     &.active {
@@ -326,7 +326,7 @@
     }
   }
 
-  .courses, .libraries, .programs {
+  .courses, .libraries, .archived-courses, .programs {
     .title {
       @extend %t-title6;
       margin-bottom: $baseline;
@@ -342,7 +342,7 @@
       padding-bottom: ($baseline/2);
       color: $gray-l2;
     }
-	}
+  }
 
   .list-courses {
     border-radius: 3px;
