--- a/lms/djangoapps/discussion/templates/discussion/discussion_board.html
+++ b/lms/djangoapps/discussion/templates/discussion/discussion_board.html
@@ -41,7 +41,7 @@ DiscussionBoardFactory({
     content_info: ${annotated_content_info | n, dump_js_escaped_json},
     course_name: '${course.display_name_with_default | n, js_escaped_string}',
     course_settings: ${course_settings | n, dump_js_escaped_json},
-    discussion_default_topic_id: '${discussion_default_topic_id | n, js_escaped_string}'
+    defaultTopicId: '${discussion_default_topic_id | n, js_escaped_string}'
 });
 </%static:require_module>
 </%block>
