Add course-level option to enable/disable Adaptive Learning feature.
Squashed from c2bf8a76aefcc52c453501d6e06981cac39a7f79.

Signed-off-by: Tomasz Gargas <tomasz@opencraft.com>

--- a/lms/templates/dashboard.html
+++ b/lms/templates/dashboard.html
@@ -17,7 +17,7 @@ from adaptive_learning.config.models import AdaptiveLearningEnabledFlag
 <%
   cert_name_short = settings.CERT_NAME_SHORT
   cert_name_long = settings.CERT_NAME_LONG
-  adaptive_learning_enabled = AdaptiveLearningEnabledFlag.current().enabled
+  adaptive_learning_enabled = AdaptiveLearningEnabledFlag.current().feature_enabled()
 %>
 
 
