Test WatchedFork configuration with innocuous commit

--- a/lms/templates/dashboard.html
+++ b/lms/templates/dashboard.html
@@ -19,7 +19,7 @@ from openedx.core.djangolib.markup import HTML, Text
 %>
 
 
-<%block name="pagetitle">${_("Dashboard")}</%block>
+<%block name="pagetitle">${_("Dashboard - Testing WatchedFork Configuration")}</%block>
 <%block name="bodyclass">view-dashboard is-authenticated</%block>
 
 <%block name="header_extras">
