--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -33,6 +33,8 @@
 <main id="main" aria-label="Content" tabindex="-1">
     <section class="find-courses">
       <section class="courses-container">
+
+        <%block name="course_discovery_search">
         % if course_discovery_enabled:
         <div id="discovery-form" role="search" aria-label="course" class="wrapper-search-context">
           <div id="discovery-message" class="search-status-label"></div>
@@ -54,6 +56,7 @@
         <div id="filter-bar" class="filters hide-phone is-collapsed">
         </div>
         % endif
+        </%block>
 
         <div class="courses${'' if course_discovery_enabled else ' no-course-discovery'}" role="region" aria-label="${_('List of Courses')}">
           <ul class="courses-listing">
@@ -66,6 +69,7 @@
         </div>
 
 
+        <%block name="course_discovery_refine_search">
         % if course_discovery_enabled:
         <aside aria-label="${_('Refine Your Search')}" class="search-facets phone-menu">
           <h2 class="header-search-facets">${_('Refine Your Search')}</h2>
@@ -73,6 +77,8 @@
           </section>
         </aside>
         % endif
+        </%block>
+
 
       </section>
     </section>
