--- a/lms/templates/courseware/course_about.html
+++ b/lms/templates/courseware/course_about.html
@@ -40,13 +40,8 @@ from six import string_types
           location.href = xhr.responseText;
         }
       } else if (xhr.status == 403) {
-        %if settings.REDIRECT_UNAUTHENTICATED_USER_TO_LOGIN_ON_ENROLL:
-          location.replace("${reverse('signin_user') | n, js_escaped_string}?next=${request.path | u}");
-        %else:
-          $('#register_error').text(
-              (xhr.responseText ? xhr.responseText : "${_("An error has occurred. Please ensure that you are logged in to enroll.") | n, js_escaped_string}")
-          ).css("display", "block");
-        %endif
+        // redirect unauthenticated user to the login page
+        location.replace("${reverse('signin_user') | n, js_escaped_string}?next=" + encodeURIComponent("${request.path | n, js_escaped_string}"));
       } else {
         $('#register_error').text(
             (xhr.responseText ? xhr.responseText : "${_("An error occurred. Please try again later.") | n, js_escaped_string}")
