Add remaining translations

--- a/common/lib/xmodule/xmodule/css/capa/display.scss
+++ b/common/lib/xmodule/xmodule/css/capa/display.scss
@@ -450,6 +450,11 @@ div.problem {
         content: "Answer: ";
 
       }
+      &:lang(he):before {
+        @extend %t-strong;
+        display: inline;
+        content: "תשובה:";
+      }
       &:empty {
         &:before {
           display: none;
