--- a/cms/templates/content_libraries/xblock_iframe.html
+++ b/cms/templates/content_libraries/xblock_iframe.html
@@ -66,7 +66,7 @@
        files (defined in webpack.common.config.js) to get that entry point and all
        of its dependencies.
     -->
-  <script type="text/javascript" src="{{ lms_root_url }}/static/xmodule_js/common_static/bundles/commons.js"></script>
+  <script type="text/javascript" src="{{ lms_root_url }}/static/bundles/commons.js"></script>
   <!-- The video XBlock (and perhaps others?) expect this global: -->
   <script>
     window.onTouchBasedDevice = function() { return navigator.userAgent.match(/iPhone|iPod|iPad|Android/i); };
