fix: display right-to-left for rtl-languages in mobile

--- a/lms/static/sass/_header.scss
+++ b/lms/static/sass/_header.scss
@@ -339,6 +339,10 @@
 /*
   Mobile menu styling
 */
+.window-wrap[dir='rtl'] .mobile-menu {
+  @include text-align(right);
+}
+
 .mobile-menu {
   border-top: 1px solid theme-color('primary');
   margin: $baseline*1.25 0 -0.5*$baseline;
