tests: fix quality

--- a/common/test/templates/edxmako.html
+++ b/common/test/templates/edxmako.html
@@ -1,1 +1,1 @@
-<page><div id="${element_id}" ns="main">Testing the MakoService</div></page>
+<%page expression_filter="h"/><div id="${element_id}" ns="main">Testing the MakoService</div>
