--- a/lms/templates/dashboard/_dashboard_entitlement_actions.html
+++ b/lms/templates/dashboard/_dashboard_entitlement_actions.html
@@ -1,4 +1,4 @@
-<%page args="course_overview, entitlement, dashboard_index, can_refund_entitlement, show_email_settings" expression_filter="h"/>
+<%page args="course_overview, entitlement, dashboard_index, can_refund_entitlement, can_unenroll, show_email_settings" expression_filter="h"/>
 
 <%!
 import six
@@ -28,7 +28,7 @@ dropdown_btn_id = "entitlement-actions-dropdown-btn-{}".format(dashboard_index)
 
   <div id="${dropdown_id}" class="entitlement-actions-dropdown" tabindex="-1">
     <ul class="entitlement-actions-dropdown-list" aria-label="${_('Available Actions')}" role="menu">
-      % if can_refund_entitlement:
+      % if can_refund_entitlement and can_unenroll:
         <li class="entitlement-actions-item" role="menuitem">
           ## href, id, rel, and data-model-close-button-selector must be defined for compatibility with lms/static/js/leanModal.js
           ## data-dropdown-selector and data-dropdown-button-selector must be defined for compatibility with lms/static/js/dashboard/dropdown.js
