--- a/lms/templates/courseware/courseware.html
+++ b/lms/templates/courseware/courseware.html
@@ -21,6 +21,8 @@ from openedx.features.course_experience import course_home_page_title, DISABLE_C
    settings.FEATURES.get('ENABLE_SPECIAL_EXAMS', False) and
    (course.enable_proctored_exams or course.enable_timed_exams)
    )
+
+   completion_aggregator_url = settings.COMPLETION_AGGREGATOR_URL if settings.FEATURES.get("SHOW_PROGRESS_BAR", False) else ""
 %>
 
 % if display_reset_dates_banner:
@@ -197,6 +199,12 @@ ${HTML(fragment.foot_html())}
                             % endif
                             <span class="nav-item nav-item-sequence">${sequence_title}</span>
                         </div>
+                        % if settings.FEATURES.get("SHOW_PROGRESS_BAR", False):
+                          <div class="container">
+                            <iframe style="border: none; height: 50px; position: relative; top: 10px; width: -webkit-fill-available" src="${completion_aggregator_url}/${course.id}/">
+                            </iframe>
+                          </div>
+                        % endif
                     </div>
                 </nav>
             </div>
