--- a/lms/static/certificates/sass/_components.scss
+++ b/lms/static/certificates/sass/_components.scss
@@ -497,6 +497,12 @@
     .accomplishment-type {
       margin-top: 0;
     }
+
+    // hide the fancy
+    .accomplishment-signatories .signatory-signature,
+    .accomplishment-type-symbol {
+      display: none;
+    }
   }
 }
 
